[package]
name = "jq"
version = "0.1.0"
authors = ["orenovadia <orenovad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
pest = "2.1.3"                   # The Elegant Parser
pest_derive = "2.1.0"            # pest's derive macro